<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.hamedmomeni.localwallchanger.app.MainActivity$PlaceholderFragment"
    android:background="@color/bg"
    android:padding="0dp">

    <RelativeLayout
        android:background="@color/actionBarRed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actionBar"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_white_24dp"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:id="@+id/textView6"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_info_white_24dp"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/actionBar">

        <TextView
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide"
            android:id="@+id/textView7"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:background="@color/pathBgOrange"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/path"
                    android:textColor="@android:color/white"
                    android:id="@+id/textView8" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/path_icon"
                    android:id="@+id/imageView2" />
            </LinearLayout>

            <EditText
                android:enabled="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/default_path"
                android:layout_weight="5" />

            <Button
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:text="@string/browse_btn"
                android:id="@+id/browseBtn"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textAlignment="center"
                android:background="@color/actionBarRed"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <LinearLayout
                android:background="@color/timeBgYellow"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_time_period"
                    android:textColor="@android:color/white"
                    android:id="@+id/textView9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/time_icon"
                    android:id="@+id/imageView3" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="7"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/once_15"
                    android:id="@+id/timeText"
                    android:singleLine="false"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_marginRight="25dp">

                <ImageView
                    android:src="@drawable/stop_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/stop_service"
                    android:id="@+id/stopBtn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_update_service"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/textView10" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center">

                <ImageView
                    android:src="@drawable/start_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/start_update_service"
                    android:id="@+id/startBtn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_service"
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/textView11" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
